--- a/components/zmopc7ed4-java-springboot/overlays/development/deployment-patch.yaml
+++ b/components/zmopc7ed4-java-springboot/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: zmopc7ed4-java-springboot
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-69caf381cf.ppse.p3.openshiftapps.com/rhtap/rhtap-qe:f37a46524b262dc56cd630a3ca304ab1173bd37d@sha256:628c188f829004aa88df9ed38065d46801f0bc75a6242c2dae2ad4febaf9834c
+          name: container-image
